--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,46 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.pageTitle{
+  color: #677db7;
+  font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 3px;
+  font-weight: bold;
+  padding: 20px;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.exerciseCard{
+  background-color: #677db7;
+  border: solid 4px whitesmoke;
+  border-radius: 8px; 
+  padding: 12px; 
+  margin-bottom: 10px; 
+  margin-left: 20px;
+  margin-top: 20px;
+  box-shadow: 10px 0px 10px #101010; /* slightly bigger shadow for depth */
+  transition: transform 0.2s, box-shadow 0.2s; /* smooth hover effect */
+  max-width: 300px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.workoutCard{
+  background-color: #3b96b4;
+  border: solid 4px whitesmoke;
+  border-radius: 8px; 
+  padding: 12px; 
+  margin-bottom: 10px; 
+  margin-left: 20px;
+  margin-top: 20px;
+  box-shadow: 10px 0px 10px #101010; /* slightly bigger shadow for depth */
+  transition: transform 0.2s, box-shadow 0.2s; /* smooth hover effect */
+  max-width: 300px;
+}
+.addWorkoutButton{
+  border-radius: 6px;
+}
+input{
+  margin-left: 20px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+button{
+  border-radius: 6px;
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
